# monitor_bot

./: .env.example  .gitignore  DEX_SWAP_notification_enhancement_plan.md  README.md  SOL_TRANSFER_counterpart_address_plan.md  add_test_wallet.py  alembic.ini  app.py  check_rate_limit.py  check_transactions.py  check_wallet_settings.py  conftest.py  debug_before_parameter.py  debug_sol_monitoring.py  debug_sol_notification.py  debug_test.py  explain_monitoring.py  lightweight_test.py  main.py  performance_test.py  pyproject.toml  quick_api_test.py  quick_test_notification.py  run_tests.py  test_database_connection.py  test_dex_swap_enhancement.py  test_duplicate_fix.py  test_final_duplicate_fix.py  test_signature_update.py  test_sol_notification_complete.py  test_sol_notification_simple.py  test_wechat_curl.py  test_wechat_direct.py  test_wechat_real.py  test_wechat_simple.py  update_wallet_threshold.py  实现计划.md  技术实现方案.md  推特API测试指南.md  项目记忆_实现计划.md
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: RPC配置数组化优化完成.md  dex_swap_notification_enhancement_implementation.md  notification_system_implementation.md  sol_transfer_counterpart_address_phase1_implementation.md  sol_transfer_feature_complete.md  sol_transfer_feature_simplification.md  sol_transfer_phase3_implementation.md  solana_monitor_bot_development_progress.md  多节点RPC配置升级完成.md  通知系统简化重构完成记录.md  通知系统简化重构记录.md  项目记忆_阶段4完成确认.md
configs/: notification_templates_example.json
docs/: database_dependency_issue.md  notification_system.md  notification_system_simplification_plan.md  plugin_development.md  wechat_notification_testing.md
examples/: plugin_system_example.py  wechat_notification_examples.py
migrations/: env.py
migrations/versions/: add_notification_system_tables.py  (+2 more)
tests/: conftest.py  test_monitor_plugins.py  test_notification_services.py  test_real_twitter_api.py  test_solana_integration.py  test_solana_services.py  test_twitter_services.py  test_wechat_notification.py
(+32 files in other folders)
